thermion_dart/native/include/c_api/TCamera.h

// All buffers contain 16 column-major doubles, borrowed only during the call.
EMSCRIPTEN_KEEPALIVE void Camera_setModelMatrixFromBuffer(TCamera *camera, const double *matrix16);
EMSCRIPTEN_KEEPALIVE void Camera_setCustomProjectionWithCullingFromBuffer(TCamera *camera, const double *matrix16, double near, double far);
EMSCRIPTEN_KEEPALIVE void Camera_getModelMatrixInto(TCamera *camera, double *out16);
EMSCRIPTEN_KEEPALIVE void Camera_getViewMatrixInto(TCamera *camera, double *out16);
EMSCRIPTEN_KEEPALIVE void Camera_getProjectionMatrixInto(TCamera *camera, double *out16);
EMSCRIPTEN_KEEPALIVE void Camera_getCullingProjectionMatrixInto(TCamera *camera, double *out16);