thermion_dart/native/include/c_api/TTransformManager.h

    // Buffers contain 16 column-major doubles, borrowed only during the call.
    // Missing transform components produce a zero matrix, matching the value getters.
    EMSCRIPTEN_KEEPALIVE void TransformManager_getLocalTransformInto(TTransformManager *manager, EntityId entity, double *out16);
    EMSCRIPTEN_KEEPALIVE void TransformManager_getWorldTransformInto(TTransformManager *manager, EntityId entity, double *out16);
    EMSCRIPTEN_KEEPALIVE void TransformManager_setTransformFromBuffer(TTransformManager *manager, EntityId entity, const double *matrix16);